@@ -33,7 +33,6 @@
 #endif
 #include "misc.h"
 #include "xf86.h"
-#include "xf86_ansic.h"
 #include "xf86_OSproc.h"
 #include "xf86Xinput.h"
 #include "exevents.h"		/* Needed for InitValuator/Proximity stuff */
@@ -42,6 +41,8 @@
 #ifdef XFree86LOADER
 #include "xf86Module.h"
 #endif
+#include <errno.h>
+#include <string.h>
 
 #define JSX_XCOORD	65584
 #define JSX_YCOORD	65585
@@ -350,7 +351,7 @@ static XF86ModuleVersionInfo xf86JS_XVersionRec = {
    MODINFOSTRING1,
    MODINFOSTRING2,
    XORG_VERSION_CURRENT,
-   1, 0, 0,
+   1, 1, 0,
    ABI_CLASS_XINPUT,
    ABI_XINPUT_VERSION,
    MOD_CLASS_XINPUT,
